Done all functionality

--- a/YourOSBB.Web/Views/Shared/_OsbbHeadLayout.cshtml
+++ b/YourOSBB.Web/Views/Shared/_OsbbHeadLayout.cshtml
@@ -39,7 +39,7 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Tariff" asp-action="ShowTariffsToHead">Витрати</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Голосування</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Voting" asp-action="ShowVotingToHead">Голосування</a>
                     </li>
                 </ul>
             </div>
