--- a/YourOSBB.Web/Views/Shared/_ResidentLayout.cshtml
+++ b/YourOSBB.Web/Views/Shared/_ResidentLayout.cshtml
@@ -38,7 +38,7 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Tariff" asp-action="ShowTariffsToResidents">Витрати</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Голосування</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Voting" asp-action="ShowVotingToResidents">Голосування</a>
                     </li>
                 </ul>
             </div>
