--- a/YourOSBB.Web/Views/Tariff/CreateTariff.cshtml
+++ b/YourOSBB.Web/Views/Tariff/CreateTariff.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewBag.Title = "title";
-    Layout = "_ResidentLayout";
+    Layout = "_OsbbHeadLayout";
 }
 
 <form method="post" asp-action="CreateTariff" asp-controller="Tariff">
